# AIO-Downloader

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  desktop.py  launcher.py  main.py
app/config/: __init__.py  settings.py
app/downloaders/: __init__.py  aria2_downloader.py  aria2_rpc.py  base.py  gallery_downloader.py  registry.py  spotify_downloader.py  ytdlp_downloader.py
app/models/: __init__.py  download_request.py  download_result.py  job.py
app/runtime_patches/: sitecustomize.py
app/services/: adult_video_resolver.py  batch_manifest.py  browser_cookies.py  filename_service.py  hentai_playlist.py  javhdporn.py  job_service.py  pdf_service.py  pornhub_model.py  progress_service.py  queue_service.py  spotify_public_fallback.py  tool_installer.py  torrent_search.py  video_sites.py
app/utils/: paths.py  runtime.py  subprocess_utils.py  windows_asyncio.py
app/web/: app.py
app/web/static/: app.js  style.css
installer/windows/: AIO-Downloader.iss
scripts/: generate-installer-assets.ps1  package-release.ps1  package-windows-bundle.ps1  package-windows-portable-lite.ps1  package-windows-setup.ps1  run-unix.sh  run-windows.ps1
tests/: test_aria2_follow.py  test_batch_manifest.py  test_browser_cookies.py  test_download_actions.py  test_hanime_brand.py  test_job_service_batch_resume.py  test_launcher.py  test_paths.py  test_registry.py  test_request.py  test_settings.py  test_tool_installer.py  test_torrent_search.py  test_video_sites.py  test_ytdlp_batch_cancel.py  test_ytdlp_probe.py
(+1 files in other folders)
