[project]
name = "aio-downloader"
version = "1.0.0"
description = "Standalone Flask dashboard for aria2, yt-dlp, gallery, PDF, and spotDL downloads."
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4",
  "flask-cors>=4.0,<7",
  "python-dotenv>=1.0,<2",
  "httpx>=0.27,<1",
  "beautifulsoup4>=4.12,<5",
  "Pillow>=10.0,<13",
  "curl-cffi>=0.10,<1",
  "yt-dlp[default]>=2025.1.1",
  "hanime-plugin==2026.5.10",
  "spotdl>=4.2,<5",
  "pywebview>=5.4,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
